--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section class="hero" id="about">
       <img
         src="assets/images/tausif.jpg"
-        alt="jubaer-ahmed-bhuiyan"
+        alt=""
         loading="lazy"
         class="hero-img"
       />
@@ -144,7 +144,7 @@
             loading="lazy"
             class="project-pic"
           />
-          <h3 class="project-title">COVID Data Canada</h3>
+          <h3 class="project-title">Adaptive and Responsive Design</h3>
           <p class="project-details">
             Here i have created two basic webpage, one with adaptive and another only responsive.
             <br>
