--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           Hi, you can call me Tausif!
           An enthusiastic and fast learner who just enjoys problem solving. A computer Science student.
           And a geek!
-          Learning and making myself better everyday.
+          Learning and making myself better every day.
         </p>
       </div>
     </section>
@@ -57,7 +57,7 @@
     <section class="more-about">
       <h2>More About Me</h2>
       <p>
-        Master of Science in Computing and Information System(2021-2023).
+        Master of Science in Computing and Information Systems (2021-2023).
         <br>
         University of Greenwich
       </p>
@@ -65,9 +65,12 @@
       <p>
         I have always liked analytical problems that required understanding and critical thinking to solve them. Ever since I was introduced to the world of mathematics and programming, I knew these were just the things for me. As a result, I have always known my place would be in the Computer Science field.
         <br>
-        I have found interest when i start learinig my first code in html. That time i knew i gonna be a front end developper one day. I have proper knowledge of all the concept of html and css such as tags, flex, css query. In my master research i have learn more about adaptive and responsive webpage. I have created two simple webpage focusing on adaptive and responsive part where i learn the clear concept of adaptive and responsive website. In addition i also created a fully responsive demo university website where i show my skills in front end webdevelopment. I also have knowledge in ui-ux concept like figma where i can make any webpage. I am very passionate about front end development.
+        I became interested when I started learning my first code in HTML. I have proper knowledge of all the HTML and CSS concepts such as tags, flex, css queries. In my master's research, I have learned more about adaptive and responsive web pages. I have created two simple webpages focusing on adaptive and responsive parts where I learned the clear concept of adaptive and responsive websites. In addition, I also created a fully responsive demo university website where I show my skills in front-end web development. I also know ui-ux concepts like figma where I can make any webpage. I am very passionate about front-end development.
         <br>
-        In addition, I have also worked in the kitcher and retail industry to provide for myself during my education. This allowed me to gather additional important skills such as communication, empathy, teamwork, stress management etc.
+        
+        I also have an interest in the data science field. I know every query in SQL. I know how to use Tableau, an Excel platform to organize data. I have done a course in Udemy where I learned about SQL, Excel, and Python libraries like pandas and numpy.
+        <br>
+        In addition, I have also worked in the Hotel industry to provide for myself during my education. This allowed me to gather additional important skills such as communication, empathy, teamwork, stress management etc.
       </p>
     </section>
     
@@ -146,9 +149,9 @@
           />
           <h3 class="project-title">Adaptive and Responsive</h3>
           <p class="project-details">
-            Here i have created two basic webpage, one with adaptive and another only responsive.
+            Here I have created two basic webpages, one adaptive and another only responsive.
             <br>
-            <b class="stack">Stack</b>: HTML5, CSS, JavaScript, Adapive, Responsive, GIT
+            <b class="stack">Stack</b>: HTML5, CSS, JavaScript, Adaptive, Responsive, GIT
           </p>
           <a href="https://github.com/Tausif3787/adaptive-and-responsive.git" target="_blank" class="project-link">Check it Out</a>
         </div>
@@ -161,7 +164,7 @@
           />
           <h3 class="project-title">Portfolio Website</h3>
           <p class="project-details">
-            This website to showcase my portfolio and projects as a mean of an online resume.
+            This website showcases my portfolio and projects as a means of an online resume.
             <br>
             <b class="stack">Stack</b>: HTML5, CSS, JavaScript, ReactJS, Bootstrap, GIT
           </p>
